--- a/Receitas/2.CSS Básico/estilo.css
+++ b/Receitas/2.CSS Básico/estilo.css
@@ -1,3 +1,28 @@
-p{
+p.verso{
     color: blue;
+}
+
+p.mote{
+    color: red;
+}
+
+a:hover, a:active, a:visited:hover{
+    color: black;
+}
+
+a:visited{
+    color: chocolate;
+}
+
+img.avatar{
+    border-radius: 50%;
+    width: 40px;
+}
+
+#poeta img{
+    border-radius: 50%;
+}
+
+th{
+    background-color: rgb(210, 18, 228);
 }
