--- a/Receitas/Html, css e JavaScript/8.Fetch/estilo.css
+++ b/Receitas/Html, css e JavaScript/8.Fetch/estilo.css
@@ -13,7 +13,6 @@ table{
 
 .botaoCarregar{
     text-align: center;
-
 }
 
 .botao{
@@ -22,6 +21,7 @@ table{
     color: white;
 }
 
+/*
 footer{
     text-align: center;
     background-image: url("https://blog.beard.com.br/wp-content/uploads/2016/12/Cerveja-no-caf%C3%A9-da-manh%C3%A3-Uma-nova-tend%C3%AAncia-no-Brasil.jpg");
@@ -29,4 +29,4 @@ footer{
     background-position: center bottom;
     background-size: auto;
     padding: 200px;
-}
+}*/
