--- a/Receitas/React com NextJS/next-04/styles/selecionado.module.css
+++ b/Receitas/React com NextJS/next-04/styles/selecionado.module.css
@@ -24,7 +24,7 @@
 
 .div{
     display: flex;
-    width: 80%;
+    width: 70%;
     height: 500px;
     aspect-ratio: 10px;
     object-fit: cover;
@@ -33,42 +33,71 @@
     background-color: black;
     border-radius: 15px;
     position: relative;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 11%;
+    margin-right: 9%;
+    column-gap: 0;
+    columns: 2;
 }
 
 .div img{
-    width: 60%;
+    width: 70%;
     border-radius: 15px;
     margin-top: -10%;
     object-fit: cover;
     margin-left: 1%;
 }
 
-.div h1{
+.h1{
     color: white;
-    font-size: 30px;
-    margin-right: -70%;
-    margin-left: 150px;
-    text-align: end;
+    font-size: 20px;
+    margin-left: -15%;
     text-decoration: overline underline rgb(184, 61, 61);
 }
 
 .divInfo{
-    text-align: center;
-    margin-left: 20%;
-    margin-left: 0%;
+    margin-left: 30%;
+    position: relative;
 }
 
-.ano{
-    font-size: 20px;
-    margin-top: -70%;
-    margin-left: 70%;
+.div1{
+    column-count: 2;
+    border: 1px solid rgb(184, 61, 61); 
+    border-radius: 15px;
+    margin: 0;
+    column-gap: 0;
+    margin-right: 10%;
+    margin-left: -50%;
 }
 
-.lancamento{
-    font-size: 20px;
-    margin-right: -120%;
-    margin-left: 130%;
+.div2{
+    margin-left: 2%;
+    margin-bottom: 9%;
+}
+
+.div3{
+    margin-left: 2%;
     margin-top: -10%;
+    margin-bottom: 10%;
+}
+
+.sinopse{
+    border: 1px solid rgb(184, 61, 61); 
+    border-radius: 15px;
+    margin-right: 10%;
+    margin-left: -50%;
+    margin-top: 5%;
+    text-align: center;
+}
+
+
+.imgPoster{
+    margin-top: 8%;
+    margin-left: 2%;
+    object-fit: cover;
+    width: 95%;
+}
+
+.imgPoster img{
+    width: 100%;
+    object-fit: cover;
 }
