--- a/Receitas/React com NextJS/next-04/styles/selecionado.module.css
+++ b/Receitas/React com NextJS/next-04/styles/selecionado.module.css
@@ -49,8 +49,8 @@
 
 .h1{
     color: white;
-    font-size: 20px;
-    margin-left: -15%;
+    font-size: 15px;
+    margin-left: -45%;
     text-decoration: overline underline rgb(184, 61, 61);
 }
 
@@ -67,16 +67,18 @@
     column-gap: 0;
     margin-right: 10%;
     margin-left: -50%;
+    text-align: center;
+    
 }
 
 .div2{
     margin-left: 2%;
-    margin-bottom: 9%;
+    margin-bottom: 15%;
 }
 
 .div3{
     margin-left: 2%;
-    margin-top: -10%;
+    margin-top: -9%;
     margin-bottom: 10%;
 }
 
