--- a/Receitas/React com NextJS/next-04/styles/movies.module.css
+++ b/Receitas/React com NextJS/next-04/styles/movies.module.css
@@ -53,18 +53,14 @@
 }
 
 .imgPoster{
-    max-width: 60%;
+    width: 110px;
     border-radius: 15px;
-    margin-top: 7%;
+    margin-top: 15%;
     justify-items: baseline;
     object-fit: cover;
+    margin-left: 15%;
 }
 
-.imgPoster img{
-    width: 60%;
-    border-radius: 15px;
-    margin-top: -7%;
-}
 
 .textPoster{
     position: relative;
