--- a/Receitas/React com NextJS/next_final/styles/footer.module.css
+++ b/Receitas/React com NextJS/next_final/styles/footer.module.css
@@ -1,8 +1,9 @@
 @charset "UTF-8";
 
 .footer{
+    margin-top: 30px;
     background-color: black;
-    height: 100px;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -15,5 +16,6 @@
 }
 
 .footer img{
+    width: 25px;
     margin-left: 20px;
 }
