--- a/Receitas/React com NextJS/next_final/styles/index.module.css
+++ b/Receitas/React com NextJS/next_final/styles/index.module.css
@@ -1,6 +1,6 @@
 .div{
     text-align: center;
-    background-color: black;
+    background-color: gray;
     color: white;
     border-radius: 15px;
     padding: 15px;
