--- a/Receitas/React com NextJS/next-03/styles/movies.module.css
+++ b/Receitas/React com NextJS/next-03/styles/movies.module.css
@@ -1,13 +1,12 @@
 .galeria{
     column-gap: 0;
-    column-count: 3;
+    column-count: 4;
     text-align: center;
     justify-content: center;
     justify-items: center;
-    margin-right: 20px;
     margin-bottom: 20px;
     margin-top: 20px;
-    margin-left: 40px;
+    position: relative;
 }
 
 .galeria:has(.poster:hover) .poster:not(:hover){
@@ -55,11 +54,12 @@
 .textPoster{
     position: absolute;
     font-family: 'Copperplate', Copperplate Gothic Light, fantasy;
-    font-size: 20px;
     flex-grow: 1;
     text-align: center;
-    margin-left: 200px;
-    margin-top: 100px;
+    font-size: 12px;
+    margin-left: 50%;
+    margin-right: 5%;
+    margin-top: 25%;
 }
 
 
