--- a/Receitas/React com NextJS/next-04/styles/selecionado.module.css
+++ b/Receitas/React com NextJS/next-04/styles/selecionado.module.css
@@ -1,27 +1,3 @@
-/*.div{
-    position: relative;
-    background-color: black;
-    margin-left: 15%;
-    margin-right: 15%;
-    border-radius: 25px;
-    padding: 10px;
-}
-
-.div p{
-    color: white;
-    size: 20px;
-    margin-top: 60px;
-}
-
-.div img{
-    border-radius: 15px;
-    object-fit: cover;
-    width: 50%;
-    text-align: start;
-    margin: 0;
-    margin-bottom: 25%;
-}*/
-
 .div{
     display: flex;
     width: 70%;
@@ -33,7 +9,7 @@
     background-color: black;
     border-radius: 15px;
     position: relative;
-    margin-left: 11%;
+    margin-left: 15%;
     margin-right: 9%;
     column-gap: 0;
     columns: 2;
@@ -50,8 +26,8 @@
 .h1{
     color: white;
     font-size: 15px;
-    margin-left: -45%;
     text-decoration: overline underline rgb(184, 61, 61);
+    margin-top: 50px;
 }
 
 .divInfo{
@@ -66,8 +42,9 @@
     margin: 0;
     column-gap: 0;
     margin-right: 10%;
-    margin-left: -50%;
+    margin-left: -70%;
     text-align: center;
+    margin-top: 20px;
     
 }
 
@@ -86,7 +63,7 @@
     border: 1px solid rgb(184, 61, 61); 
     border-radius: 15px;
     margin-right: 10%;
-    margin-left: -50%;
+    margin-left: -70%;
     margin-top: 5%;
     text-align: center;
 }
@@ -101,4 +78,11 @@
 .imgPoster img{
     width: 300px;
     object-fit: cover;
+}
+
+.divInfo h1{
+    font-size: 30px;
+    text-align: start;
+    margin-left: -60%;
+    margin-right: 10%;
 }
